--- a/RabbitMQ.publisher/RabbitMQ.publisher.csproj
+++ b/RabbitMQ.publisher/RabbitMQ.publisher.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
